# llm-de-identification

./: README.md
finetune/: Modelfile_gemma27b  USAGE.md  dataloader.py  finetune_gemma3_27b.py  pyproject.toml
runner/: .dockerignore  .env-template  Dockerfile  entrypoint.sh  pyproject.toml
runner/src/: kafka_consumer.py  logging_config.py  prompts.py  util.py
